feat: initial working version

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,16 @@ PORT=
 HOST=
 NODE_ENV=
 APP_KEY=
+DB_CONNECTION=
+DB_HOST=
+DB_USER=
+DB_PASSWORD=
+DB_NAME=
+SMTP_HOST=
+SMTP_PORT=
+SES_ACCESS_KEY=
+SES_ACCESS_SECRET=
+SES_REGION=
+MAILGUN_API_KEY=
+SPARKPOST_API_KEY=
+SESSION_DRIVER=
