--- a/.adonisrc.json
+++ b/.adonisrc.json
@@ -1,6 +1,10 @@
 {
 	"typescript": true,
-	"commands": ["./commands", "@adonisjs/core/build/commands"],
+	"commands": [
+		"./commands",
+		"@adonisjs/core/build/commands",
+		"@adonisjs/lucid/build/commands"
+	],
 	"exceptionHandlerNamespace": "App/Exceptions/Handler",
 	"aliases": {
 		"App": "app",
@@ -8,7 +12,22 @@
 		"Config": "config",
 		"Database": "database"
 	},
-	"preloads": ["./start/routes", "./start/kernel"],
-	"providers": ["./providers/AppProvider", "@adonisjs/core"],
-	"metaFiles": [".env", ".adonisrc.json"]
+	"preloads": [
+		"./start/routes",
+		"./start/kernel"
+	],
+	"providers": [
+		"./providers/AppProvider",
+		"@adonisjs/core",
+		"@adonisjs/lucid",
+		"@adonisjs/auth",
+		"@adonisjs/mail",
+		"@adonisjs/view",
+		"@adonisjs/session"
+	],
+	"metaFiles": [
+		".env",
+		".adonisrc.json",
+		"resources/views/**/*.edge"
+	]
 }
