--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,15 @@
 {
-  "extends": [
-    "plugin:adonis/typescriptApp"
-  ]
+	"extends": [
+		"plugin:adonis/typescriptPackage",
+		"prettier",
+		"prettier/@typescript-eslint"
+	],
+	"plugins": [
+		"prettier"
+	],
+	"rules": {
+		"prettier/prettier": [
+			"error"
+		]
+	}
 }
