--- a/package.json
+++ b/package.json
@@ -23,10 +23,20 @@
   },
   "dependencies": {
     "@adonisjs/ace": "^6.9.4",
+    "@adonisjs/auth": "^4.3.1",
     "@adonisjs/core": "^5.0.0-preview-rc-1.11",
     "@adonisjs/fold": "^6.4.0",
+    "@adonisjs/lucid": "^8.4.1",
+    "@adonisjs/mail": "^4.2.2",
+    "@adonisjs/session": "^3.1.2",
+    "@adonisjs/view": "^2.0.8",
+    "@slynova/slug": "^1.1.2",
+    "luxon": "^1.25.0",
+    "pg": "^8.3.2",
+    "phc-argon2": "^1.0.10",
     "proxy-addr": "^2.0.6",
     "reflect-metadata": "^0.1.13",
+    "slugify": "^1.4.5",
     "source-map-support": "^0.5.19"
   }
 }
