--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,34 @@
 {
-	"include": ["**/*"],
-	"exclude": ["node_modules", "build"],
+	"include": [
+		"**/*"
+	],
+	"exclude": [
+		"node_modules",
+		"build"
+	],
 	"extends": "./node_modules/adonis-preset-ts/tsconfig",
 	"compilerOptions": {
 		"outDir": "build",
 		"rootDir": "./",
 		"sourceMap": true,
 		"paths": {
-			"App/*": ["./app/*"],
-			"Contracts/*": ["./contracts/*"],
-			"Database/*": ["./database/*"]
+			"App/*": [
+				"./app/*"
+			],
+			"Contracts/*": [
+				"./contracts/*"
+			],
+			"Database/*": [
+				"./database/*"
+			]
 		},
-		"types": ["@adonisjs/core"]
+		"types": [
+			"@adonisjs/core",
+			"@adonisjs/lucid",
+			"@adonisjs/auth",
+			"@adonisjs/mail",
+			"@adonisjs/view",
+			"@adonisjs/session"
+		]
 	}
 }
