--- a/.adonisrc.json
+++ b/.adonisrc.json
@@ -1,10 +1,6 @@
 {
 	"typescript": true,
-	"commands": [
-		"./commands",
-		"@adonisjs/core/build/commands",
-		"@adonisjs/lucid/build/commands"
-	],
+	"commands": ["./commands", "@adonisjs/core/build/commands", "@adonisjs/lucid/build/commands"],
 	"exceptionHandlerNamespace": "App/Exceptions/Handler",
 	"aliases": {
 		"App": "app",
@@ -12,11 +8,7 @@
 		"Config": "config",
 		"Database": "database"
 	},
-	"preloads": [
-		"./start/routes",
-		"./start/kernel",
-		"./start/events"
-	],
+	"preloads": ["./start/routes", "./start/kernel", "./start/events"],
 	"providers": [
 		"./providers/AppProvider",
 		"@adonisjs/core",
@@ -26,9 +18,5 @@
 		"@adonisjs/view",
 		"@adonisjs/session"
 	],
-	"metaFiles": [
-		".env",
-		".adonisrc.json",
-		"resources/views/**/*.edge"
-	]
+	"metaFiles": [".env", ".adonisrc.json", "resources/views/**/*.edge"]
 }
