--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,15 @@
 {
-	"include": [
-		"**/*"
-	],
-	"exclude": [
-		"node_modules",
-		"build"
-	],
+	"include": ["**/*"],
+	"exclude": ["node_modules", "build"],
 	"extends": "./node_modules/adonis-preset-ts/tsconfig",
 	"compilerOptions": {
 		"outDir": "build",
 		"rootDir": "./",
 		"sourceMap": true,
 		"paths": {
-			"App/*": [
-				"./app/*"
-			],
-			"Contracts/*": [
-				"./contracts/*"
-			],
-			"Database/*": [
-				"./database/*"
-			]
+			"App/*": ["./app/*"],
+			"Contracts/*": ["./contracts/*"],
+			"Database/*": ["./database/*"]
 		},
 		"types": [
 			"@adonisjs/core",
