--- a/.adonisrc.json
+++ b/.adonisrc.json
@@ -18,5 +18,5 @@
 		"@adonisjs/view",
 		"@adonisjs/session"
 	],
-	"metaFiles": [".env", ".adonisrc.json", "resources/views/**/*.edge", "public/**"]
+	"metaFiles": [".env", ".adonisrc.json", "resources/views/**/*.edge", "public/**", "database/fixtures/*.md"]
 }
