--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@adonisjs/mail": "^4.2.2",
     "@adonisjs/session": "^3.1.2",
     "@adonisjs/view": "^2.0.8",
+    "@dimerapp/markdown": "^3.2.2",
     "@slynova/slug": "^1.1.2",
     "got": "^11.5.2",
     "luxon": "^1.25.0",
